<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart house remote</string>
    <string name="action_settings">Settings</string>
    <string name="buttonName1">1</string>
    <string name="buttonName2">2</string>
    <string name="buttonName3">3</string>
    <string name="buttonName4">4</string>
    <string name="buttonName5">5</string>
    <string name="buttonName6">6</string>
    <string name="buttonName7">7</string>
    <string name="buttonName8">8</string>
    <string name="buttonName9">9</string>
    <string name="buttonName10">10</string>
    <string name="buttonName11">11</string>
    <string name="buttonName12">12</string>
    <string name="buttonName13">13</string>
    <string name="buttonName14">14</string>
    <string name="buttonName15">15</string>
    <string name="textButton1">sending string 1</string>
    <string name="textButton2">sending string 2</string>
    <string name="textButton3">sending string 3</string>
    <string name="textButton4">sending string 4</string>
    <string name="textButton5">sending string 5</string>
    <string name="textButton6">sending string 6</string>
    <string name="textButton7">sending string 7</string>
    <string name="textButton8">sending string 8</string>
    <string name="textButton9">sending string 9</string>
    <string name="textButton10">sending string 10</string>
    <string name="textButton11">sending string 11</string>
    <string name="textButton12">sending string 12</string>
    <string name="textButton13">sending string 13</string>
    <string name="textButton14">sending string 14</string>
    <string name="textButton15">sending string 15</string>
    <string name="defaultIP">192.168.0.103</string>
    <string name="defaultPort">1153</string>
    <string name="ic_action_settings">Buttons settings</string>
    <string name="ip_settings">IP settings</string>
    <string name="action_undo">Undo</string>
    <string name="action_accept">Accept</string>
    <string name="textViewIp">IP address</string>
    <string name="textViewPort">Port</string>
    <string name="preference_ip">preference_ip</string>
    <string name="preference_port">preference_port</string>
    <string name="textViewButtonName">Button name</string>
    <string name="textViewButtonString">Button sending string</string>
    <string name="defaultHex">0x00</string>
    <string name="defaultHexLabel">HEX value in the string's end</string>

</resources>