<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button5"
        android:layout_toRightOf="@+id/button4"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName4" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName1" />

    <Button
        android:id="@+id/button15"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button8"
        android:layout_toRightOf="@+id/button8"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName15" />

    <Button
        android:id="@+id/button14"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button8"
        android:layout_toRightOf="@+id/button7"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName14" />

    <Button
        android:id="@+id/button13"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/button8"
        android:layout_toLeftOf="@+id/button8"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName13" />

    <Button
        android:id="@+id/button10"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName10" />

    <Button
        android:id="@+id/button11"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button2"
        android:layout_toLeftOf="@+id/button3"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName11" />

    <Button
        android:id="@+id/button12"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="@android:drawable/btn_default"
        android:text="@string/buttonName12" />

</RelativeLayout>